<resources>
    <string name="app_name">SMP</string>
    <string name="action_settings">Settings</string>
    <string name="button_play">Play</string>
    <string name="button_next">Next</string>
    <string name="button_previous">Previous</string>
    <string name="default_start_time">00:00</string>
    <string name="default_end_time">00:00</string>
    <string name="change_directory">Directory</string>
    <string name="action_shuffle">Shuffle</string>
    <string name="song_title_default"><![CDATA[<--------Please select a song-------->]]></string>
</resources>
