<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.nhatton.smallmediaplayer.MainActivity">
    <item
        android:id="@+id/directory_change"
        android:title="@string/change_directory"
        android:actionLayout="@layout/support_simple_spinner_dropdown_item"

        app:showAsAction="always"/>
    <item
        android:id="@+id/button_previous"
        android:icon="@android:drawable/ic_media_previous"
        android:title="@string/button_previous"
        app:showAsAction="always"/>
    <item
        android:id="@+id/button_play"
        android:icon="@android:drawable/ic_media_play"
        android:title="@string/button_play"
        app:showAsAction="always"/>
    <item
        android:id="@+id/button_next"
        android:icon="@android:drawable/ic_media_next"
        android:title="@string/button_next"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>